--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ server.port = 80
 # logging
 logging.level.com.mycompany.webapp= debug
 logging.pattern.console = %clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(%-70(%logger{10}:%clr(%method){magenta})){cyan} %clr(:) %m%n
+
+# Oracle DataSource(connection Pool)
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@kosa1.iptime.org:50104:orcl
+spring.datasource.username=spring
+spring.datasource.password=oracle
+spring.datasource.hikari.maximum-pool-size=2
+
+# MyBatis
+mybatis.config-location=classpath:mybatis/mapper-config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
